# serveur-streaming-audio

./: CMakeLists.txt  README.md
compilation/: CLIENT_SERVEUR_UDP  CLIENT_SERVEUR_UDP.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
src/: define_serveur_client.h  main.cpp
src/analyse_audio/: analyse_audio.cpp  analyse_audio.h
src/audiostream/: audiostream.cpp  audiostream.h
src/decodeur_audio/: decodeur_audio.cpp  decodeur_audio.h
src/encodeur_audio/: encodeur_audio.cpp  encodeur_audio.h
src/socket_client/: client_udp.cpp  client_udp.h
src/socket_serveur/: serveur_udp.cpp  serveur_udp.h
src/utils/: utils.cpp  utils.h
